--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,12 +48,13 @@ jobs:
                   name: build
                   path: .
             - name: Configure AWS credentials
-              uses: shallwefootball/s3-upload-action@master
+              uses: aws-actions/configure-aws-credentials@v4
               with:
-                  aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws_bucket: ${{ secrets.AWS_BUCKET }}
-                  source_dir: ${{ env.BUILD_DIRECTORY }}/_next
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: ${{ secrets.AWS_REGION }}
+            - name: Upload files to S3
+              run: aws s3 cp . s3://${{ secrets.S3_BUCKET_NAME }}/${{ secrets.MICRO_NAME }}-${{ github.sha }} --recursive
             # - name: Configure AWS credentials
             #   uses: aws-actions/configure-aws-credentials@v4
             #   with:
