--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-region: ${{ secrets.AWS_REGION }}
             - name: Upload files to S3
-              run: aws s3 cp . s3://${{ secrets.S3_BUCKET_NAME }}/${{ secrets.MICRO_NAME }}-${{ github.sha }} --recursive
+              run: aws s3 cp ${{ env.BUILD_DIRECTORY }}/_next s3://${{secrets.S3_BUCKET_NAME}}/${{env.BUILD_DIRECTORY}}/_next --recursive
             # - name: Configure AWS credentials
             #   uses: aws-actions/configure-aws-credentials@v4
             #   with:
