chore: Update deploy workflow to use Node.js 18-alpine image and build project

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -66,6 +66,8 @@ jobs:
         runs-on: ubuntu-latest
         needs: send-to-s3-and-ecr
         steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
