--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: ${PROJECT_NAME}
+    name: home
 spec:
     replicas: 2
     selector:
         matchLabels:
-            app: ${PROJECT_NAME}
+            app: home
     template:
         metadata:
             labels:
-                app: ${PROJECT_NAME}
+                app: home
         spec:
             containers:
                 - name: nextjs-container
-                  image: public.ecr.aws/${AWS_ACCOUNT_ALIAS}/${PROJECT_NAME}:{SHA}
+                  image: public.ecr.aws/o6i8p2j4/home:latest
                   ports:
-                      - containerPort: 8080
+                      - containerPort: 3000
                   env:
                       - name: NODE_ENV
                         value: 'production'
