--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: ${PROJECT_NAME}-service
+    name: home-service
 spec:
     selector:
-        app: ${PROJECT_NAME}
+        app: home
     ports:
         - protocol: TCP
           port: 80
