--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -73,10 +73,8 @@ jobs:
                   path: .
             - name: Verify the deployment files
               run: |
-                  echo "todos los archivos"
-                  ls -la
-                  echo "carpeta de archivos de build"
-                  ls -la ${{ env.BUILD_DIRECTORY }}
+                  echo >>> Directorio de build...
+                  echo >>> ${BUILD_DIRECTORY}
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
