chore: Update deploy workflow to use Node.js 18-alpine image and echo build directory

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -73,8 +73,8 @@ jobs:
                   path: .
             - name: Verify the deployment files
               run: |
-                  echo >>> Directorio de build...
-                  echo >>> ${BUILD_DIRECTORY}
+                  echo ">>> Directorio de build..."
+                  echo ">>> ${BUILD_DIRECTORY}"
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
               with:
