--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -10,18 +10,19 @@ jobs:
     prepare-project-to-deploy:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
             - name: Set up Node.js
               uses: actions/setup-node@v4
               with:
                   node-version: 18
+            - name: Checkout code
+              uses: actions/checkout@v4
 
             - name: Install dependencies and build project
               run: |
                   npm install
                   npm run build
+                  echo ">>> Directorios antes de construir la imagen..."
+                  ls -al
                   mkdir ${{ env.BUILD_DIRECTORY }}/_next
                   cp -r ${{ env.BUILD_DIRECTORY }}/static ${{ env.BUILD_DIRECTORY }}/_next/
 
