chore: Update deploy workflow to use Node.js 18-alpine image and build project with specified build directory

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -18,6 +18,8 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Install dependencies and build project
+              env:
+                  BUILD_DIRECTORY: ${{env.BUILD_DIRECTORY}}
               run: |
                   npm install
                   npm run build
