--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -86,3 +86,8 @@ jobs:
                   aws eks --region us-east-2 update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }}
                   kubectl apply -f k8s/
                   kubectl rollout restart deployment home
+                  kubectl rollout status deployment/home --namespace=default
+            - name: Clean up S3 bucket
+              if: failure()
+              run: |
+                  echo ">>> Limpiando archivos estáticos en S3..."
