chore: Update home-container image in k8s deployment.yml

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -14,7 +14,7 @@ spec:
         spec:
             containers:
                 - name: home-container
-                  image: public.ecr.aws/o6i8p2j4/storefront-poc:latest
+                  image: public.ecr.aws/o6i8p2j4/storefront-poc:latestxxxxxxxxxx
                   ports:
                       - containerPort: 3000
                   env:
