chore: Update S3 bucket cleanup condition in deploy-app-2.yml

--- a/.github/workflows/deploy-app-2.yml
+++ b/.github/workflows/deploy-app-2.yml
@@ -95,9 +95,10 @@ jobs:
               run: |
                   echo ">>> Limpiando archivos estáticos en S3..."
                   {
-                      # Script para eliminar objetos que no tengan el prefijo BUILD_DIRECTORY
+                      # Script para eliminar objetos que no tengan el primer path igual a BUILD_DIRECTORY
                       aws s3api list-objects-v2 --bucket "$S3_BUCKET_NAME" --query "Contents[].Key" --output text | while read -r key; do
-                          if [[ -n "$key" && "$key" != "$BUILD_DIRECTORY"* ]]; then
+                          first_path=$(echo "$key" | cut -d'/' -f1)
+                          if [[ -n "$key" && "$first_path" != "$BUILD_DIRECTORY" ]]; then
                               echo "Eliminando objeto: $key"
                               aws s3api delete-object --bucket "$S3_BUCKET_NAME" --key "$key"
                           fi
