chore: Update k8s ingress configuration and add new test page component

--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -19,19 +19,10 @@ metadata:
         # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
 spec:
     rules:
-        # - http:
-        #       paths:
-        #           - path: /
-        #             pathType: Prefix
-        #             backend:
-        #                 service:
-        #                     name: home-service
-        #                     port:
-        #                         number: 80
         - host: uno.unmsm.link
           http:
               paths:
-                  - path: /
+                  - path: /principal
                     pathType: Prefix
                     backend:
                         service:
