--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -66,3 +66,10 @@ spec:
                             name: home-service
                             port:
                                 number: 80
+                  - path: /
+                    pathType: Prefix
+                    backend:
+                        service:
+                            name: home-service
+                            port:
+                                number: 80
